# crying-counter

./: .env.example  README.md  go.mod  go.sum  main.go  main.py  pyproject.toml
crying_counter/: main.py  matcher.py
crying_counter/db/: counts.sqlite  database.py
levenshtein/: levenshtein.go
matcher/: matcher.go  matcher_test.go
test/: test_matcher.py
tests/: test_matcher.py
